# ff-fun

./: CMakeLists.txt  compile2.sh
ff_fun_2022/: .gitignore  CMakeLists.txt
ff_fun_2022/play1/: CMakeLists.txt  play1.cpp
ff_fun_2024/: CMakeLists.txt  fun1.cpp  fun2_encode.cpp  fun3_encode.cpp  fun4_encode_write.cpp
ff_fun_2024/play1/: CMakeLists.txt  play1.cpp
ff_fun_old/: .gitignore
ff_fun_old/OLD/tut/: CMakeLists.txt
ff_fun_old/fun2/: fun2.c
ff_fun_old/funcv/: CMakeLists.txt  VWriter.h  main.cpp
ff_fun_old/funcv2/: CMakeLists.txt  VDecoder.h  VEncoder.cpp  VEncoder.h
ff_fun_old/play1/: CMakeLists.txt
ff_fun_old/play2/: CMakeLists.txt  play2.cpp
fun/: CMakeLists.txt  fun.c
fun1/: CMakeLists.txt  fun1.c
fun2/: CMakeLists.txt
funcv/: CMakeLists.txt  VWriter.cpp  main.cpp
funcv2/: CMakeLists.txt  VCoder.cpp  VCoder.h  VDecoder.cpp  VDecoder.h  VEncoder.cpp  VEncoder.h  main.cpp
play1/: CMakeLists.txt  main.cpp  play1.cpp
play2/: play2.cpp
tut/: CMakeLists.txt  tutorial01.c
